# object_store_sample

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: async_read_from_object_store.rs  lib.rs  list_bucket.rs  read_from_object_store.rs
